# rx_bevy

./: .env  .gitignore  .remarkrc.js  CHANGELOG.md  Cargo.toml  Makefile.toml  book.toml  codecov.yml  contributing.md  hohenheim.toml  license  package.json  pnpm-lock.yaml  readme.md  release-plz.toml  tarpaulin.toml
crates/bevy_kit_action/: Cargo.toml  readme.md
crates/bevy_kit_action/examples/: adsr.rs  direct.rs  multi_transform_action.rs  observable_order_test.rs  simple.rs  simple_mapped_action.rs  switching_connections.rs  triggers.rs
crates/bevy_kit_action/src/: action.rs  action_context.rs  action_events.rs  action_map.rs  action_mapper_plugin.rs  action_plugin.rs  action_source.rs  action_state.rs  action_state_plugin.rs  action_system_set.rs  action_trigger_plugin.rs  clock.rs  feature_bounds.rs  lib.rs
crates/bevy_kit_erased_component_registry/: Cargo.toml  readme.md
crates/bevy_kit_erased_component_registry/examples/: erased_example.rs  stuff.rs
crates/bevy_kit_erased_component_registry/src/: entity_command_extension_insert_erased_component.rs  lib.rs  registry.rs
crates/bevy_mod_alternate_system_on_press/: Cargo.toml
crates/bevy_mod_alternate_system_on_press/src/: lib.rs
crates/examples_common/: Cargo.toml  readme.md
crates/examples_common/src/: alternate_system_on_press.rs  lib.rs  print_notification_observer.rs  send_event.rs  subscription_map_resource.rs
crates/feature_checker/: Cargo.toml  readme.md
crates/feature_checker/src/: main.rs
crates/mdbook_crate_links/: Cargo.toml
crates/mdbook_crate_links/src/: main.rs
crates/rx_bevy/: Cargo.toml  readme.md
crates/rx_bevy/examples/: 01_a_barely_integrated_observable.rs  02_a_somewhat_integrated_observable.rs  03_an_even_more_integrated_observable.rs  04_a_fully_integrated_observable.rs  10_the_mistake_of_subscribing_every_frame.rs  ad_hoc_observable.rs  adsr_example.rs  composite_operators.rs  errors.rs  gallery.rs  interval_observable_example.rs  manually_chained_operators.rs  observable_event_example.rs  observable_event_minimal_example.rs  observable_gallery.rs  observable_keyboard_component_example.rs  observable_keyboard_example.rs  observable_message_example.rs  observable_proxy_example.rs  observable_resource_ad_hoc_example.rs  observable_resource_example.rs  observer_entity_destination.rs  observer_resource_destination.rs  operator_chaining.rs  operator_piping.rs  subjects.rs  subscribing_directly_to_an_observable_to_emit_events.rs
crates/rx_bevy/src/: lib.rs
crates/rx_bevy/tests/: commands_with_observable_test.rs  entity_command_as_proxy_observable_test.rs  entity_destination_test.rs  event_observable_test.rs  message_observable_test.rs  resource_observable_test.rs  rx_bevy_context_test.rs  scheduler_test.rs  subject_component_test.rs  subscription_satellite_test.rs  utilities.rs
crates/rx_bevy_common/: Cargo.toml  readme.md
crates/rx_bevy_common/src/: lib.rs  rx_bevy_context.rs  subscription_component.rs
crates/rx_bevy_common/tests/: commands_with_observable_test.rs  entity_command_subscribe_test.rs  entity_destination_test.rs  observable_component_test.rs  observable_query_test.rs  resource_destination_test.rs  scheduler_test.rs  subject_component_test.rs  subscription_component_test.rs  utilities.rs
crates/rx_bevy_common_bounds/: Cargo.toml  readme.md
crates/rx_bevy_common_bounds/src/: lib.rs  reflect_bound.rs  serialize_bound.rs  signal_bound.rs
crates/rx_bevy_context/: Cargo.toml  readme.md
crates/rx_bevy_context/src/: bevy_context.rs  entity_subscription.rs  lib.rs  notification_events.rs  rx_bevy_context.rs  subscriber_component.rs  subscription_component.rs  subscription_component_scheduled.rs  subscription_component_unscheduled.rs
crates/rx_bevy_context_command/: Cargo.toml
crates/rx_bevy_context_command/src/: command_context.rs  context_with_commands.rs  lib.rs
crates/rx_bevy_core/: Cargo.toml  readme.md
crates/rx_bevy_core/examples/: identity_operator_example.rs  shared_subscriber.rs
crates/rx_bevy_core/src/: arc_subscriber.rs  assert_subscription_closed_on_drop.rs  drop_subscription.rs  from_context.rs  inner_subscription.rs  lib.rs  observable.rs  observer.rs  operator.rs  option_operator.rs  ref_cell_observer.rs  shared_destination.rs  signal_context.rs  subject.rs  subscriber.rs  subscription.rs  teardown.rs  teardown_fn.rs  tick.rs  tickable.rs  unit_subscription.rs  wtf.rs
crates/rx_bevy_ecs_observable_interval/: Cargo.toml  readme.md
crates/rx_bevy_ecs_observable_interval/examples/: interval_example.rs
crates/rx_bevy_ecs_observable_interval/src/: interval_observable.rs  interval_observable_component.rs  interval_observable_options.rs  interval_subscription.rs  lib.rs
crates/rx_bevy_ecs_observable_iterator/: Cargo.toml  readme.md
crates/rx_bevy_ecs_observable_iterator/examples/: iterator_example.rs
crates/rx_bevy_ecs_observable_iterator/src/: iterator_observable_component.rs  iterator_subscription.rs  lib.rs
crates/rx_bevy_higher_order_operator/: Cargo.toml  readme.md
crates/rx_bevy_higher_order_operator/src/: higher_order_pipe.rs  lib.rs  operator.rs
crates/rx_bevy_observable/: Cargo.toml  readme.md
crates/rx_bevy_observable/examples/: foo.rs  identity_operator_example.rs  option_operator.rs
crates/rx_bevy_observable/src/: connector_observer.rs  forwarder.rs  lib.rs  (+8 more)
crates/rx_bevy_observable_combine_latest/: Cargo.toml  readme.md
crates/rx_bevy_observable_deferred/: Cargo.toml  readme.md
crates/rx_bevy_observable_event/: Cargo.toml  readme.md
crates/rx_bevy_observable_flat/: Cargo.toml  readme.md
crates/rx_bevy_observable_interval/: Cargo.toml  readme.md
crates/rx_bevy_observable_iterator/: Cargo.toml  readme.md
crates/rx_bevy_observable_keyboard/: Cargo.toml  readme.md
crates/rx_bevy_observable_merge/: Cargo.toml  readme.md
crates/rx_bevy_observable_message/: Cargo.toml  readme.md
crates/rx_bevy_observable_pipe/: Cargo.toml  readme.md
crates/rx_bevy_observable_proxy/: Cargo.toml  readme.md
crates/rx_bevy_observer_flat/: Cargo.toml  readme.md
crates/rx_bevy_observer_fn/: Cargo.toml  readme.md
(+2464 files in other folders)
