[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/AlexAegis/rx_bevy"
repository = "https://github.com/AlexAegis/rx_bevy"
documentation = "https://github.com/AlexAegis/rx_bevy"
authors = ["alexaegis"]
license = "MIT"
readme = "readme.md"
publish = false

[workspace.lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization and disable debug info for faster builds
[profile.dev]
opt-level = 1
incremental = true
debug = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.test]
incremental = true

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]

## Workspace Crates

# Core
rx_core = { path = "crates/rx_core" }
rx_core_traits = { path = "crates/rx_core_traits" }
rx_core_emission_variants = { path = "crates/rx_core_emission_variants" }
rx_core_testing = { path = "crates/rx_core_testing" }
# Macros
rx_core_macro_common = { path = "crates/rx_core_macro_common" }
rx_core_macro_executor_derive = { path = "crates/rx_core_macro_executor_derive" }
rx_core_macro_observable_derive = { path = "crates/rx_core_macro_observable_derive" }
rx_core_macro_observer_derive = { path = "crates/rx_core_macro_observer_derive" }
rx_core_macro_operator_derive = { path = "crates/rx_core_macro_operator_derive" }
rx_core_macro_scheduler_derive = { path = "crates/rx_core_macro_scheduler_derive" }
rx_core_macro_subject_derive = { path = "crates/rx_core_macro_subject_derive" }
rx_core_macro_subscriber_derive = { path = "crates/rx_core_macro_subscriber_derive" }
rx_core_macro_subscription_derive = { path = "crates/rx_core_macro_subscription_derive" }
rx_core_macro_task_derive = { path = "crates/rx_core_macro_task_derive" }
# Observables
rx_core_observable_connectable = { path = "crates/rx_core_observable_connectable" }
rx_core_observable_combine_latest = { path = "crates/rx_core_observable_combine_latest" }
rx_core_observable_deferred = { path = "crates/rx_core_observable_deferred" }
rx_core_observable_empty = { path = "crates/rx_core_observable_empty" }
rx_core_observable_interval = { path = "crates/rx_core_observable_interval" }
rx_core_observable_iterator = { path = "crates/rx_core_observable_iterator" }
rx_core_observable_iterator_on_tick = { path = "crates/rx_core_observable_iterator_on_tick" }
rx_core_observable_merge = { path = "crates/rx_core_observable_merge" }
rx_core_observable_never = { path = "crates/rx_core_observable_never" }
rx_core_observable_of = { path = "crates/rx_core_observable_of" }
rx_core_observable_pipe = { path = "crates/rx_core_observable_pipe" }
rx_core_observable_throw = { path = "crates/rx_core_observable_throw" }
rx_core_observable_zip = { path = "crates/rx_core_observable_zip" }
# Observers
rx_core_observer_fn = { path = "crates/rx_core_observer_fn" }
rx_core_observer_noop = { path = "crates/rx_core_observer_noop" }
rx_core_observer_print = { path = "crates/rx_core_observer_print" }
# Subscribers
rx_core_subscriber_concurrent = { path = "crates/rx_core_subscriber_concurrent" }
rx_core_subscriber_exhaust = { path = "crates/rx_core_subscriber_exhaust" }
rx_core_subscriber_higher_order = { path = "crates/rx_core_subscriber_higher_order" }
rx_core_subscriber_higher_order_all = { path = "crates/rx_core_subscriber_higher_order_all" }
rx_core_subscriber_higher_order_map = { path = "crates/rx_core_subscriber_higher_order_map" }
rx_core_subscriber_rc = { path = "crates/rx_core_subscriber_rc" }
rx_core_subscriber_switch = { path = "crates/rx_core_subscriber_switch" }
# Operators
rx_core_operator_adsr = { path = "crates/rx_core_operator_adsr" }
rx_core_operator_composite = { path = "crates/rx_core_operator_composite" }
rx_core_operator_concat_all = { path = "crates/rx_core_operator_concat_all" }
rx_core_operator_concat_map = { path = "crates/rx_core_operator_concat_map" }
rx_core_operator_delay = { path = "crates/rx_core_operator_delay" }
rx_core_operator_end_with = { path = "crates/rx_core_operator_end_with" }
rx_core_operator_enumerate = { path = "crates/rx_core_operator_enumerate" }
rx_core_operator_exhaust_all = { path = "crates/rx_core_operator_exhaust_all" }
rx_core_operator_exhaust_map = { path = "crates/rx_core_operator_exhaust_map" }
rx_core_operator_error_boundary = { path = "crates/rx_core_operator_error_boundary" }
rx_core_operator_fallback_when_silent = { path = "crates/rx_core_operator_fallback_when_silent" }
rx_core_operator_filter = { path = "crates/rx_core_operator_filter" }
rx_core_operator_filter_map = { path = "crates/rx_core_operator_filter_map" }
rx_core_operator_finalize = { path = "crates/rx_core_operator_finalize" }
rx_core_operator_find = { path = "crates/rx_core_operator_find" }
rx_core_operator_first = { path = "crates/rx_core_operator_first" }
rx_core_operator_identity = { path = "crates/rx_core_operator_identity" }
rx_core_operator_lift_option = { path = "crates/rx_core_operator_lift_option" }
rx_core_operator_lift_result = { path = "crates/rx_core_operator_lift_result" }
rx_core_operator_map = { path = "crates/rx_core_operator_map" }
rx_core_operator_map_into = { path = "crates/rx_core_operator_map_into" }
rx_core_operator_merge_all = { path = "crates/rx_core_operator_merge_all" }
rx_core_operator_merge_map = { path = "crates/rx_core_operator_merge_map" }
rx_core_operator_reduce = { path = "crates/rx_core_operator_reduce" }
rx_core_operator_scan = { path = "crates/rx_core_operator_scan" }
rx_core_operator_skip = { path = "crates/rx_core_operator_skip" }
rx_core_operator_start_with = { path = "crates/rx_core_operator_start_with" }
rx_core_operator_switch_all = { path = "crates/rx_core_operator_switch_all" }
rx_core_operator_switch_map = { path = "crates/rx_core_operator_switch_map" }
rx_core_operator_take = { path = "crates/rx_core_operator_take" }
rx_core_operator_tap_next = { path = "crates/rx_core_operator_tap_next" }
rx_core_operator_into_result = { path = "crates/rx_core_operator_into_result" }
# Subscriptions
rx_core_subscription_inert = { path = "crates/rx_core_subscription_inert" }
# Subjects
rx_core_subject = { path = "crates/rx_core_subject" }
rx_core_subject_async = { path = "crates/rx_core_subject_async" }
rx_core_subject_behavior = { path = "crates/rx_core_subject_behavior" }
rx_core_subject_replay = { path = "crates/rx_core_subject_replay" }
# Schedulers
rx_core_scheduler_ticking = { path = "crates/rx_core_scheduler_ticking" }
# Bevy
rx_bevy = { path = "crates/rx_bevy" }
rx_bevy_common = { path = "crates/rx_bevy_common" }
rx_bevy_context = { path = "crates/rx_bevy_context" }
# Bevy Observables
rx_bevy_observable_event = { path = "crates/rx_bevy_observable_event" }
rx_bevy_observable_keyboard = { path = "crates/rx_bevy_observable_keyboard" }
rx_bevy_observable_message = { path = "crates/rx_bevy_observable_message" }
rx_bevy_observable_proxy = { path = "crates/rx_bevy_observable_proxy" }
rx_bevy_observable_resource = { path = "crates/rx_bevy_observable_resource" }
# Misc
examples_common = { path = "crates/examples_common" }
feature_checker = { path = "crates/feature_checker" }
bevy_mod_alternate_system_on_press = { path = "crates/bevy_mod_alternate_system_on_press" }
xtask = { path = "crates/xtask" }

## External Crates

# Bevy (First party)
bevy = { version = "0.16", default-features = false, features = [
    "multi_threaded",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "png",
    "x11",
    "bevy_gilrs",
    "bevy_scene",
    "animation",
    "file_watcher",
    "bevy_gltf",
    "bevy_log",
] }
bevy_app = { version = "0.16", default-features = false }
bevy_derive = { version = "0.16", default-features = false }
bevy_ecs = { version = "0.16", default-features = false }
bevy_log = { version = "0.16", default-features = false }
bevy_reflect = { version = "0.16", default-features = false }
bevy_time = { version = "0.16", default-features = false }
bevy_math = { version = "0.16", default-features = false }
bevy_platform = { version = "0.16", default-features = false }
bevy_ptr = { version = "0.16", default-features = false }
bevy_input = { version = "0.16", default-features = false }
bevy_window = { version = "0.16", default-features = false }
# Bevy (Third Party)
bevy-inspector-egui = { version = "0.31.0", default-features = false, features = [
    "bevy_render",
] }
bevy_egui = { version = "0.34.1", default-features = false, features = [
    "immutable_ctx",
] }
# Data Structures
bitflags = { version = "2.10.0", default-features = false }
smallvec = { version = "1.15.1", default-features = false }
slab = { version = "0.4.9", default-features = false }
ringbuffer = { version = "0.16.0", default-features = false }
either = { version = "1.15.0", default-features = false }
# Error Handling
thiserror = { version = "2.0.17", default-features = false }
# Serialization
serde = { version = "1.0.219", default-features = false }
# Math
num-traits = { version = "0.2.19", default-features = false }
rand = { version = "0.9.2", default-features = false, features = [
    "thread_rng",
] }
# Rust Ergonomics
derive-where = { version = "1.4.0", default-features = false }
# Logging
disqualified = { version = "1.0.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
# Macro
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
# Cargo Tools
cargo_metadata = { version = "0.23.0", default-features = false }
# CLI
clap = { version = "4.5.53", default-features = false }

[workspace.metadata.cargo-machete]
ignored = ["rx_core_testing"]
