[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
homepage = "https://github.com/AlexAegis/rx_bevy"
repository = "https://github.com/AlexAegis/rx_bevy"
documentation = "https://github.com/AlexAegis/rx_bevy"
authors = ["Sandor Gyori <alexaegis@pm.me>"]
license = "MIT"
readme = "readme.md"
publish = false

[workspace.lints.clippy]
type_complexity = "allow"

# Enable a small amount of optimization and disable debug info for faster builds
[profile.dev]
opt-level = 1
incremental = true
debug = 0

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.test]
incremental = true

[profile.release]
incremental = true
debug = 0

[workspace.dependencies]

## Workspace Crates

# Core
rx_core = { version = "0.2.0", path = "crates/rx_core" }
rx_core_notification_store = { version = "0.2.0", path = "crates/rx_core_notification_store" }
rx_core_notification_variadics = { version = "0.2.0", path = "crates/rx_core_notification_variadics" }
rx_core_testing = { version = "0.2.0", path = "crates/rx_core_testing" }
rx_core_common = { version = "0.2.0", path = "crates/rx_core_common" }
# Macros
rx_core_macro_common = { version = "0.2.0", path = "crates/rx_core_macro_common" }
rx_core_macro_executor_derive = { version = "0.2.0", path = "crates/rx_core_macro_executor_derive" }
rx_core_macro_observable_derive = { version = "0.2.0", path = "crates/rx_core_macro_observable_derive" }
rx_core_macro_observer_derive = { version = "0.2.0", path = "crates/rx_core_macro_observer_derive" }
rx_core_macro_operator_derive = { version = "0.2.0", path = "crates/rx_core_macro_operator_derive" }
rx_core_macro_scheduler_derive = { version = "0.2.0", path = "crates/rx_core_macro_scheduler_derive" }
rx_core_macro_subject_derive = { version = "0.2.0", path = "crates/rx_core_macro_subject_derive" }
rx_core_macro_subscriber_derive = { version = "0.2.0", path = "crates/rx_core_macro_subscriber_derive" }
rx_core_macro_subscription_derive = { version = "0.2.0", path = "crates/rx_core_macro_subscription_derive" }
rx_core_macro_work_derive = { version = "0.2.0", path = "crates/rx_core_macro_work_derive" }
# Observables
rx_core_observable_closed = { version = "0.2.0", path = "crates/rx_core_observable_closed" }
rx_core_observable_combine_changes = { version = "0.2.0", path = "crates/rx_core_observable_combine_changes" }
rx_core_observable_combine_latest = { version = "0.2.0", path = "crates/rx_core_observable_combine_latest" }
rx_core_observable_concat = { version = "0.2.0", path = "crates/rx_core_observable_concat" }
rx_core_observable_connectable = { version = "0.2.0", path = "crates/rx_core_observable_connectable" }
rx_core_observable_create = { version = "0.2.0", path = "crates/rx_core_observable_create" }
rx_core_observable_deferred = { version = "0.2.0", path = "crates/rx_core_observable_deferred" }
rx_core_observable_empty = { version = "0.2.0", path = "crates/rx_core_observable_empty" }
rx_core_observable_interval = { version = "0.2.0", path = "crates/rx_core_observable_interval" }
rx_core_observable_iterator = { version = "0.2.0", path = "crates/rx_core_observable_iterator" }
rx_core_observable_iterator_on_tick = { version = "0.2.0", path = "crates/rx_core_observable_iterator_on_tick" }
rx_core_observable_join = { version = "0.2.0", path = "crates/rx_core_observable_join" }
rx_core_observable_just = { version = "0.2.0", path = "crates/rx_core_observable_just" }
rx_core_observable_merge = { version = "0.2.0", path = "crates/rx_core_observable_merge" }
rx_core_observable_never = { version = "0.2.0", path = "crates/rx_core_observable_never" }
rx_core_observable_throw = { version = "0.2.0", path = "crates/rx_core_observable_throw" }
rx_core_observable_timer = { version = "0.2.0", path = "crates/rx_core_observable_timer" }
rx_core_observable_zip = { version = "0.2.0", path = "crates/rx_core_observable_zip" }
# Observers
rx_core_observer_fn = { version = "0.2.0", path = "crates/rx_core_observer_fn" }
rx_core_observer_noop = { version = "0.2.0", path = "crates/rx_core_observer_noop" }
rx_core_observer_print = { version = "0.2.0", path = "crates/rx_core_observer_print" }
# Subscribers
rx_core_subscriber_higher_order = { version = "0.2.0", path = "crates/rx_core_subscriber_higher_order" }
rx_core_subscriber_higher_order_all = { version = "0.2.0", path = "crates/rx_core_subscriber_higher_order_all" }
rx_core_subscriber_higher_order_concurrent = { version = "0.2.0", path = "crates/rx_core_subscriber_higher_order_concurrent" }
rx_core_subscriber_higher_order_exhaust = { version = "0.2.0", path = "crates/rx_core_subscriber_higher_order_exhaust" }
rx_core_subscriber_higher_order_map = { version = "0.2.0", path = "crates/rx_core_subscriber_higher_order_map" }
rx_core_subscriber_higher_order_switch = { version = "0.2.0", path = "crates/rx_core_subscriber_higher_order_switch" }
# Operators
rx_core_operator_adsr = { version = "0.2.0", path = "crates/rx_core_operator_adsr" }
rx_core_operator_buffer_count = { version = "0.2.0", path = "crates/rx_core_operator_buffer_count" }
rx_core_operator_catch = { version = "0.2.0", path = "crates/rx_core_operator_catch" }
rx_core_operator_composite = { version = "0.2.0", path = "crates/rx_core_operator_composite" }
rx_core_operator_concat_all = { version = "0.2.0", path = "crates/rx_core_operator_concat_all" }
rx_core_operator_concat_map = { version = "0.2.0", path = "crates/rx_core_operator_concat_map" }
rx_core_operator_count = { version = "0.2.0", path = "crates/rx_core_operator_count" }
rx_core_operator_delay = { version = "0.2.0", path = "crates/rx_core_operator_delay" }
rx_core_operator_dematerialize = { version = "0.2.0", path = "crates/rx_core_operator_dematerialize" }
rx_core_operator_element_at = { version = "0.2.0", path = "crates/rx_core_operator_element_at" }
rx_core_operator_end_with = { version = "0.2.0", path = "crates/rx_core_operator_end_with" }
rx_core_operator_enumerate = { version = "0.2.0", path = "crates/rx_core_operator_enumerate" }
rx_core_operator_error_boundary = { version = "0.2.0", path = "crates/rx_core_operator_error_boundary" }
rx_core_operator_exhaust_all = { version = "0.2.0", path = "crates/rx_core_operator_exhaust_all" }
rx_core_operator_exhaust_map = { version = "0.2.0", path = "crates/rx_core_operator_exhaust_map" }
rx_core_operator_fallback_when_silent = { version = "0.2.0", path = "crates/rx_core_operator_fallback_when_silent" }
rx_core_operator_filter = { version = "0.2.0", path = "crates/rx_core_operator_filter" }
rx_core_operator_filter_map = { version = "0.2.0", path = "crates/rx_core_operator_filter_map" }
rx_core_operator_finalize = { version = "0.2.0", path = "crates/rx_core_operator_finalize" }
rx_core_operator_find = { version = "0.2.0", path = "crates/rx_core_operator_find" }
rx_core_operator_find_index = { version = "0.2.0", path = "crates/rx_core_operator_find_index" }
rx_core_operator_first = { version = "0.2.0", path = "crates/rx_core_operator_first" }
rx_core_operator_identity = { version = "0.2.0", path = "crates/rx_core_operator_identity" }
rx_core_operator_into_result = { version = "0.2.0", path = "crates/rx_core_operator_into_result" }
rx_core_operator_is_empty = { version = "0.2.0", path = "crates/rx_core_operator_is_empty" }
rx_core_operator_lift_option = { version = "0.2.0", path = "crates/rx_core_operator_lift_option" }
rx_core_operator_lift_result = { version = "0.2.0", path = "crates/rx_core_operator_lift_result" }
rx_core_operator_map = { version = "0.2.0", path = "crates/rx_core_operator_map" }
rx_core_operator_map_error = { version = "0.2.0", path = "crates/rx_core_operator_map_error" }
rx_core_operator_map_into = { version = "0.2.0", path = "crates/rx_core_operator_map_into" }
rx_core_operator_map_never = { version = "0.2.0", path = "crates/rx_core_operator_map_never" }
rx_core_operator_materialize = { version = "0.2.0", path = "crates/rx_core_operator_materialize" }
rx_core_operator_merge_all = { version = "0.2.0", path = "crates/rx_core_operator_merge_all" }
rx_core_operator_merge_map = { version = "0.2.0", path = "crates/rx_core_operator_merge_map" }
rx_core_operator_observe_on = { version = "0.2.0", path = "crates/rx_core_operator_observe_on" }
rx_core_operator_subscribe_on = { version = "0.2.0", path = "crates/rx_core_operator_subscribe_on" }
rx_core_operator_on_next = { version = "0.2.0", path = "crates/rx_core_operator_on_next" }
rx_core_operator_on_subscribe = { version = "0.2.0", path = "crates/rx_core_operator_on_subscribe" }
rx_core_operator_pairwise = { version = "0.2.0", path = "crates/rx_core_operator_pairwise" }
rx_core_operator_reduce = { version = "0.2.0", path = "crates/rx_core_operator_reduce" }
rx_core_operator_retry = { version = "0.2.0", path = "crates/rx_core_operator_retry" }
rx_core_operator_scan = { version = "0.2.0", path = "crates/rx_core_operator_scan" }
rx_core_operator_share = { version = "0.2.0", path = "crates/rx_core_operator_share" }
rx_core_operator_skip = { version = "0.2.0", path = "crates/rx_core_operator_skip" }
rx_core_operator_start_with = { version = "0.2.0", path = "crates/rx_core_operator_start_with" }
rx_core_operator_switch_all = { version = "0.2.0", path = "crates/rx_core_operator_switch_all" }
rx_core_operator_switch_map = { version = "0.2.0", path = "crates/rx_core_operator_switch_map" }
rx_core_operator_take = { version = "0.2.0", path = "crates/rx_core_operator_take" }
rx_core_operator_tap = { version = "0.2.0", path = "crates/rx_core_operator_tap" }
rx_core_operator_tap_next = { version = "0.2.0", path = "crates/rx_core_operator_tap_next" }
rx_core_operator_with_latest_from = { version = "0.2.0", path = "crates/rx_core_operator_with_latest_from" }
# Subscriptions
rx_core_subscription_inert = { version = "0.2.0", path = "crates/rx_core_subscription_inert" }
# Subjects
rx_core_subject_async = { version = "0.2.0", path = "crates/rx_core_subject_async" }
rx_core_subject_behavior = { version = "0.2.0", path = "crates/rx_core_subject_behavior" }
rx_core_subject_provenance = { version = "0.2.0", path = "crates/rx_core_subject_provenance" }
rx_core_subject_publish = { version = "0.2.0", path = "crates/rx_core_subject_publish" }
rx_core_subject_replay = { version = "0.2.0", path = "crates/rx_core_subject_replay" }
# Schedulers
rx_core_scheduler_ticking = { version = "0.2.0", path = "crates/rx_core_scheduler_ticking" }
# Bevy
rx_bevy = { version = "0.3.0", path = "crates/rx_bevy" }
rx_bevy_common = { version = "0.3.0", path = "crates/rx_bevy_common" }
# Bevy Observables
rx_bevy_observable_event = { version = "0.3.0", path = "crates/rx_bevy_observable_event" }
rx_bevy_observable_keyboard = { version = "0.3.0", path = "crates/rx_bevy_observable_keyboard" }
rx_bevy_observable_message = { version = "0.3.0", path = "crates/rx_bevy_observable_message" }
rx_bevy_observable_proxy = { version = "0.3.0", path = "crates/rx_bevy_observable_proxy" }
rx_bevy_observable_resource = { version = "0.3.0", path = "crates/rx_bevy_observable_resource" }
# Misc
examples_common = { path = "crates/examples_common" }
xtask = { path = "crates/xtask" }

## External Crates

# Bevy (First party)
bevy = { version = "0.18", default-features = false, features = [
	"multi_threaded",
	"bevy_core_pipeline",
	"bevy_asset",
	"bevy_winit",
	"bevy_window",
	"bevy_render",
	"png",
	"x11",
	"bevy_gilrs",
	"bevy_scene",
	"gltf_animation",
	"file_watcher",
	"bevy_gltf",
	"bevy_log",
	"zstd_rust",
] }
bevy_app = { version = "0.18", default-features = false }
bevy_derive = { version = "0.18", default-features = false }
bevy_ecs = { version = "0.18", default-features = false }
bevy_input = { version = "0.18", default-features = false }
bevy_log = { version = "0.18", default-features = false }
bevy_math = { version = "0.18", default-features = false }
bevy_platform = { version = "0.18", default-features = false }
bevy_ptr = { version = "0.18", default-features = false }
bevy_reflect = { version = "0.18", default-features = false }
bevy_time = { version = "0.18", default-features = false }
bevy_window = { version = "0.18", default-features = false, features = [
	"std",
	"bevy_reflect",
] }
# Bevy (Third Party)
bevy-inspector-egui = { version = "0.36.0", default-features = false, features = [
	"bevy_render",
] }
bevy_egui = { version = "0.39.0", default-features = false, features = [
	"immutable_ctx",
] }
# Data Structures
bitflags = { version = "2.10", default-features = false }
either = { version = "1.15", default-features = false }
ringbuffer = { version = "0.16", default-features = false }
slab = { version = "0.4", default-features = false }
indexmap = { version = "2.12", default-features = false, features = ["std"] }
smallvec = { version = "1.15", default-features = false }
stealcell = { version = "0.2", default-features = false }
# Error Handling
thiserror = { version = "2.0", default-features = false }
# Serialization
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
# Math
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
# Rust Ergonomics
derive-where = { version = "1.4", default-features = false }
# Logging
disqualified = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false }
# Macro
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
seq-macro = { version = "0.3.6", default-features = false }
syn = { version = "2.0", default-features = false, features = [
	"clone-impls",
	"derive",
	"parsing",
	"printing",
	"proc-macro",
] }
variadics_please = { version = "1.1", default-features = false }
# Cargo Tools
cargo_metadata = { version = "0.23", default-features = false }
# CLI
clap = { version = "4.5", default-features = false }
# mdbook
mdbook-preprocessor = { version = "0.5.2", default-features = false }
regex = { version = "1", default-features = false }

[workspace.metadata.cargo-machete]
ignored = ["rx_core_testing"]
