[package]
name = "bevy_kit_action"
version = "0.1.0"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = ["dev", "keyboard", "mouse", "gamepad", "reflect"]
dev = ["bevy/dynamic_linking", "inspector", "debug_ui", "debug_gizmos"]
inspector = [
    "dep:bevy-inspector-egui",
    "dep:bevy_egui",
    "bevy-inspector-egui/bevy_render",
]
example = [
    "dev",
    "debug_ui",
    "debug_gizmos",
    "inspector",
    "bevy/bevy_scene",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_picking",
    "bevy/x11",
    "bevy/tonemapping_luts",
]
keyboard = []
mouse = []
gamepad = ["bevy/bevy_gilrs"]
debug_gizmos = ["bevy/bevy_gizmos"]
debug_ui = ["dep:bevy_egui"]
reflect = []

[dependencies]
bevy = { workspace = true, default-features = false }
bevy-inspector-egui = { workspace = true, optional = true, features = [] }
bevy_egui = { workspace = true, optional = true }
derive-where = { workspace = true }

[dev-dependencies]
examples_common = { workspace = true }
