[package]
name = "bevy_kit_erased_component_registry"
version = "0.1.0"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = []
dev = ["bevy/dynamic_linking", "examples_common/dev"]
example = [
    "dev",
    "bevy/bevy_scene",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_asset",
    "bevy/bevy_render",
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/bevy_picking",
    "bevy/x11",
    "bevy/tonemapping_luts",
]

[dependencies]
derive-where = { workspace = true }
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_platform = { workspace = true }
bevy_ptr = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
rand = { workspace = true }
examples_common = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true, features = ["bevy_render"] }
