[package]
name = "bevy_mod_alternate_system_on_press"
version = "0.1.0"
description = ""
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
dev = []
example = ["dev"]

[dependencies]
bevy_ecs = { workspace = true }
bevy_input = { workspace = true }
