[package]
name = "examples_common"
version = "0.1.0"
description = ""
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["debug"]
debug = []

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
rx_core_traits = { workspace = true }
rx_bevy_context = { workspace = true }
disqualified = { workspace = true }
