[package]
name = "examples_common"
version = "0.1.0"
description = ""
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["examples"]

[lints]
workspace = true

[features]
default = []

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
rx_core_common = { version = "0.1.0", path = "../rx_core_common" }
rx_bevy_common = { version = "0.1.0", path = "../rx_bevy_common" }
disqualified = { workspace = true }
