[package]
name = "examples_common"
version = "0.1.0"
description = ""
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["examples"]

[lints]
workspace = true

[features]
default = []

[dependencies]
bevy = { workspace = true, features = ["dynamic_linking"] }
rx_core_common = { workspace = true }
rx_bevy_common = { workspace = true }
disqualified = { workspace = true }
