[package]
name = "feature_checker"
version = "0.1.0"
description = ""
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license-file.workspace = true

[lints]
workspace = true

[features]
default = []
dev = []
example = ["dev"]

[dependencies]
cargo_metadata = { version = "0.22.0" }
