[package]
name = "feature_checker"
version = "0.1.0"
description = ""
readme = "readme.md"
publish = false

edition.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords = ["devtools"]

[lints]
workspace = true

[features]
default = []

[dependencies]
cargo_metadata = { workspace = true }
